products button added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,8 +38,9 @@ tr:nth-child(even) {
 			{% endif %}
 		</ul> -->
 		<ul>
-				
-				<li><a href="/eyfi-mega/" target="_self">Home</a></li>
+				<li><a href="/" target="_self">Products</a></li>
+
+				<li><a href="/eyfi-mega/" target="_self">eYFi-Mega</a></li>
 				
 				<li><a href="/eyfi-mega/downloads/" target="_self">Downloads</a></li>
 				
