header links updated

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,13 +42,13 @@ tr:nth-child(even) {
 
 				<li><a href="/eyfi-mega/" target="_self">eYFi-Mega</a></li>
 				
-				<li><a href="/eyfi-mega/downloads/" target="_self">Downloads</a></li>
-				
 				<li><a href="/eyfi-mega/documentation/" target="_self">Documentation</a></li>
 
+				<li><a href="/eyfi-mega/downloads/" target="_self">Downloads</a></li>
+				
                 <li><a href="/eyfi-mega/tutorials/" target="_self">Quick Bytes</a></li>
 
-                <li><a href="/eyfi-mega/help/" target="_self">Help</a></li>
+                <!-- <li><a href="/eyfi-mega/help/" target="_self">Help</a></li> -->
 			
 		</ul>
 	</nav>
