--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,17 @@
 
 {% include head.html %}
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145861739-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145861739-5');
+</script>
+
+
 <style type="text/css"> 
         .br { 
             display: block; 
